--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width" initial-scale="1.0">
     <title>Country search</title>
+    <link rel="stylesheet" type="text/css" href="style.css"/>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 </head>
 <body>
@@ -13,5 +14,7 @@
      <h2>List of countries</h2>
      <ul id="countries">
         <li>No data</li>
-     </ul>   
+     </ul>
+    <script src="script.js"></script>
 </body>
+</html>
